Protoype sample updates

--- a/prototype/browse.html
+++ b/prototype/browse.html
@@ -3,147 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Browse - Hweibo</title>
-  <script src="https://cdn.tailwindcss.com"></script>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
-  <style>
-    body { font-family: 'Inter', sans-serif; }
-  </style>
+  <title>Redirecting...</title>
+  <meta http-equiv="refresh" content="0; url=buyer/browse.html">
+  <script>window.location.replace('buyer/browse.html');</script>
 </head>
-<body class="min-h-screen bg-[#f6f6f8]" data-proto-active="browse">
-  <!-- Sidebar -->
-  <a href="index.html" class="fixed left-4 sm:left-6 top-6 z-50 text-sm sm:text-base font-medium font-sans tracking-[0.18em] text-zinc-800 hover:text-black transition-all duration-300">
-    hweibo
-  </a>
-
-  <div class="fixed left-4 sm:left-6 top-1/2 -translate-y-1/2 z-50">
-    <nav data-proto-nav="buyers" class="flex flex-col items-start">
-      <div data-proto-row style="max-height:0; opacity:0; pointer-events:none;" class="transition-all duration-300 ease-out overflow-hidden">
-        <a data-proto-id="search" href="search.html">
-          <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><circle cx="11" cy="11" r="8"/><path d="m21 21-4.3-4.3"/></svg>
-          <span>Search</span>
-        </a>
-      </div>
-      <div data-proto-row style="max-height:0; opacity:0; pointer-events:none;" class="transition-all duration-300 ease-out overflow-hidden">
-        <a data-proto-id="browse" href="browse.html">
-          <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><circle cx="12" cy="12" r="10"/><polygon points="16.24 7.76 14.12 14.12 7.76 16.24 9.88 9.88 16.24 7.76"/></svg>
-          <span>Browse</span>
-        </a>
-      </div>
-      <div data-proto-row style="max-height:0; opacity:0; pointer-events:none;" class="transition-all duration-300 ease-out overflow-hidden">
-        <a data-proto-id="orders" href="orders.html">
-          <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M6 2 3 6v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2V6l-3-4Z"/><path d="M3 6h18"/><path d="M16 10a4 4 0 0 1-8 0"/></svg>
-          <span>Orders</span>
-        </a>
-      </div>
-      <div data-proto-row style="max-height:0; opacity:0; pointer-events:none;" class="transition-all duration-300 ease-out overflow-hidden">
-        <a data-proto-id="wallet" href="wallet.html">
-          <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M21 12V7H5a2 2 0 0 1 0-4h14v4"/><path d="M3 5v14a2 2 0 0 0 2 2h16v-5"/><path d="M18 12a2 2 0 0 0 0 4h4v-4Z"/></svg>
-          <span>Wallet</span>
-        </a>
-      </div>
-      <div data-proto-row style="max-height:0; opacity:0; pointer-events:none;" class="transition-all duration-300 ease-out overflow-hidden">
-        <a data-proto-id="cart" href="checkout.html">
-          <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><circle cx="8" cy="21" r="1"/><circle cx="19" cy="21" r="1"/><path d="M2.05 2.05h2l2.66 12.42a2 2 0 0 0 2 1.58h9.78a2 2 0 0 0 1.95-1.57l1.65-7.43H5.12"/></svg>
-          <span>Cart</span>
-        </a>
-      </div>
-      <div data-proto-row style="max-height:0; opacity:0; pointer-events:none;" class="transition-all duration-300 ease-out overflow-hidden">
-        <a data-proto-id="profile" href="profile.html">
-          <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M19 21v-2a4 4 0 0 0-4-4H9a4 4 0 0 0-4 4v2"/><circle cx="12" cy="7" r="4"/></svg>
-          <span>Profile</span>
-        </a>
-      </div>
-    </nav>
-  </div>
-
-  <!-- Main Content -->
-  <main class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-8 pl-24 sm:pl-32">
-    <div class="flex items-center justify-between mb-8">
-      <div class="flex items-center gap-3 overflow-x-auto pb-2">
-        <button class="px-6 py-3 rounded-full bg-black text-white font-semibold text-sm whitespace-nowrap">Trending</button>
-        <button class="px-6 py-3 rounded-full bg-white text-black border border-zinc-200 font-semibold text-sm whitespace-nowrap hover:border-zinc-300">Best Value</button>
-        <button class="px-6 py-3 rounded-full bg-white text-black border border-zinc-200 font-semibold text-sm whitespace-nowrap hover:border-zinc-300">New Arrivals</button>
-        <button class="px-6 py-3 rounded-full bg-white text-black border border-zinc-200 font-semibold text-sm whitespace-nowrap hover:border-zinc-300">Fashion</button>
-        <button class="px-6 py-3 rounded-full bg-white text-black border border-zinc-200 font-semibold text-sm whitespace-nowrap hover:border-zinc-300">Tech</button>
-      </div>
-      <button class="px-4 py-2 rounded-full border border-zinc-200 bg-white flex items-center gap-2 text-sm font-semibold">
-        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M10 20a1 1 0 0 0 .553.895l2 1A1 1 0 0 0 14 21v-7a2 2 0 0 1 .517-1.341L21.74 4.67A1 1 0 0 0 21 3H3a1 1 0 0 0-.742 1.67l7.225 7.989A2 2 0 0 1 10 14z"/></svg>
-        Filters
-      </button>
-    </div>
-
-    <!-- Products Grid -->
-    <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6">
-      <!-- Product Card 1 -->
-      <div class="group cursor-pointer rounded-[40px] bg-white border-2 border-zinc-200/80 shadow-[0_18px_50px_-30px_rgba(24,24,27,0.45)] hover:border-zinc-300 hover:shadow-[0_30px_80px_-45px_rgba(24,24,27,0.55)] transition-all duration-300 hover:-translate-y-0.5 overflow-hidden">
-        <div class="relative aspect-[3/4] overflow-hidden">
-          <img src="https://images.unsplash.com/photo-1523275335684-37898b6baf30?w=400&h=500&fit=crop" alt="Product" class="w-full h-full object-cover">
-          <div class="absolute inset-0 bg-gradient-to-t from-black/40 via-black/0 to-black/0 opacity-70"></div>
-          <button class="absolute top-4 right-4 w-10 h-10 rounded-full bg-white/80 backdrop-blur-sm border border-white/60 flex items-center justify-center opacity-0 group-hover:opacity-100 transition-opacity">
-            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="text-zinc-700"><path d="M19 14c1.49-1.46 3-3.21 3-5.5A5.5 5.5 0 0 0 16.5 3c-1.76 0-3 .5-4.5 2-1.5-1.5-2.74-2-4.5-2A5.5 5.5 0 0 0 2 8.5c0 2.3 1.5 4.05 3 5.5l7 7Z"/></svg>
-          </button>
-        </div>
-        <div class="p-5 space-y-2">
-          <div class="flex items-start justify-between gap-2">
-            <h3 class="font-bold text-zinc-900 text-lg line-clamp-1">Luna Steel Watch</h3>
-            <span class="font-extrabold text-zinc-900 whitespace-nowrap">TZS 285k</span>
-          </div>
-          <p class="text-sm text-zinc-600 line-clamp-2">Highly durable, classic aesthetic</p>
-          <p class="text-xs text-zinc-500">Watch Hub · Dar es Salaam</p>
-        </div>
-      </div>
-
-      <!-- Product Card 2 -->
-      <div class="group cursor-pointer rounded-[40px] bg-white border-2 border-zinc-200/80 shadow-[0_18px_50px_-30px_rgba(24,24,27,0.45)] hover:border-zinc-300 hover:shadow-[0_30px_80px_-45px_rgba(24,24,27,0.55)] transition-all duration-300 hover:-translate-y-0.5 overflow-hidden">
-        <div class="relative aspect-[3/4] overflow-hidden">
-          <img src="https://images.unsplash.com/photo-1542291026-7eec264c27ff?w=400&h=500&fit=crop" alt="Product" class="w-full h-full object-cover">
-          <div class="absolute inset-0 bg-gradient-to-t from-black/40 via-black/0 to-black/0 opacity-70"></div>
-        </div>
-        <div class="p-5 space-y-2">
-          <div class="flex items-start justify-between gap-2">
-            <h3 class="font-bold text-zinc-900 text-lg line-clamp-1">Aero Sprint V2</h3>
-            <span class="font-extrabold text-zinc-900 whitespace-nowrap">TZS 145k</span>
-          </div>
-          <p class="text-sm text-zinc-600 line-clamp-2">Lightweight, breathable mesh</p>
-          <p class="text-xs text-zinc-500">Sport World · Arusha</p>
-        </div>
-      </div>
-
-      <!-- Product Card 3 -->
-      <div class="group cursor-pointer rounded-[40px] bg-white border-2 border-zinc-200/80 shadow-[0_18px_50px_-30px_rgba(24,24,27,0.45)] hover:border-zinc-300 hover:shadow-[0_30px_80px_-45px_rgba(24,24,27,0.55)] transition-all duration-300 hover:-translate-y-0.5 overflow-hidden">
-        <div class="relative aspect-[3/4] overflow-hidden">
-          <img src="https://images.unsplash.com/photo-1505740420928-5e560c06d30e?w=400&h=500&fit=crop" alt="Product" class="w-full h-full object-cover">
-          <div class="absolute inset-0 bg-gradient-to-t from-black/40 via-black/0 to-black/0 opacity-70"></div>
-        </div>
-        <div class="p-5 space-y-2">
-          <div class="flex items-start justify-between gap-2">
-            <h3 class="font-bold text-zinc-900 text-lg line-clamp-1">Studio Pro Wireless</h3>
-            <span class="font-extrabold text-zinc-900 whitespace-nowrap">TZS 420k</span>
-          </div>
-          <p class="text-sm text-zinc-600 line-clamp-2">Superior noise cancellation</p>
-          <p class="text-xs text-zinc-500">Audio Center · Mwanza</p>
-        </div>
-      </div>
-
-      <!-- Product Card 4 -->
-      <div class="group cursor-pointer rounded-[40px] bg-white border-2 border-zinc-200/80 shadow-[0_18px_50px_-30px_rgba(24,24,27,0.45)] hover:border-zinc-300 hover:shadow-[0_30px_80px_-45px_rgba(24,24,27,0.55)] transition-all duration-300 hover:-translate-y-0.5 overflow-hidden">
-        <div class="relative aspect-[3/4] overflow-hidden">
-          <img src="https://images.unsplash.com/photo-1549298916-b41d501d3772?w=400&h=500&fit=crop" alt="Product" class="w-full h-full object-cover">
-          <div class="absolute inset-0 bg-gradient-to-t from-black/40 via-black/0 to-black/0 opacity-70"></div>
-        </div>
-        <div class="p-5 space-y-2">
-          <div class="flex items-start justify-between gap-2">
-            <h3 class="font-bold text-zinc-900 text-lg line-clamp-1">Urban Canvas Highs</h3>
-            <span class="font-extrabold text-zinc-900 whitespace-nowrap">TZS 95k</span>
-          </div>
-          <p class="text-sm text-zinc-600 line-clamp-2">Best-selling everyday essential</p>
-          <p class="text-xs text-zinc-500">Street Style · Dodoma</p>
-        </div>
-      </div>
-    </div>
-  </main>
-
-  <script defer src="proto-nav.js"></script>
+<body>
+  <p>Redirecting to <a href="buyer/browse.html">buyer/browse.html</a>...</p>
 </body>
 </html>
