--- a/prototype/index.html
+++ b/prototype/index.html
@@ -3,98 +3,91 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Hweibo - AI Smart Shopping</title>
+  <title>Hweibo Prototype Hub</title>
   <script src="https://cdn.tailwindcss.com"></script>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
   <style>
     body { font-family: 'Inter', sans-serif; }
   </style>
 </head>
-<body class="min-h-screen bg-white" data-proto-active="search">
-  <!-- Sidebar -->
-  <a href="index.html" class="fixed left-4 sm:left-6 top-6 z-50 text-sm sm:text-base font-medium font-sans tracking-[0.18em] text-zinc-800 hover:text-black transition-all duration-300">
-    hweibo
-  </a>
+<body class="min-h-screen bg-zinc-50 text-zinc-900">
+  <main class="max-w-5xl mx-auto px-6 py-12 sm:py-16">
+    <div class="mb-10">
+      <p class="text-xs font-semibold tracking-[0.2em] uppercase text-zinc-500">Prototype Leader File</p>
+      <h1 class="mt-3 text-4xl sm:text-5xl font-extrabold tracking-tight">Hweibo End-to-End Demo Hub</h1>
+      <p class="mt-4 text-zinc-600 max-w-3xl">
+        This is the single entry point for simulation and demonstration. Buyer and seller journeys are split into separate folders and linked end to end.
+      </p>
+    </div>
 
-  <div class="fixed left-4 sm:left-6 top-1/2 -translate-y-1/2 z-50">
-    <nav data-proto-nav="buyers" class="flex flex-col items-start">
-      <div data-proto-row style="max-height:0; opacity:0; pointer-events:none;" class="transition-all duration-300 ease-out overflow-hidden">
-        <a data-proto-id="search" href="search.html">
-          <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><circle cx="11" cy="11" r="8"/><path d="m21 21-4.3-4.3"/></svg>
-          <span>Search</span>
-        </a>
-      </div>
-      <div data-proto-row style="max-height:0; opacity:0; pointer-events:none;" class="transition-all duration-300 ease-out overflow-hidden">
-        <a data-proto-id="browse" href="browse.html">
-          <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><circle cx="12" cy="12" r="10"/><polygon points="16.24 7.76 14.12 14.12 7.76 16.24 9.88 9.88 16.24 7.76"/></svg>
-          <span>Browse</span>
-        </a>
-      </div>
-      <div data-proto-row style="max-height:0; opacity:0; pointer-events:none;" class="transition-all duration-300 ease-out overflow-hidden">
-        <a data-proto-id="orders" href="orders.html">
-          <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M6 2 3 6v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2V6l-3-4Z"/><path d="M3 6h18"/><path d="M16 10a4 4 0 0 1-8 0"/></svg>
-          <span>Orders</span>
-        </a>
-      </div>
-      <div data-proto-row style="max-height:0; opacity:0; pointer-events:none;" class="transition-all duration-300 ease-out overflow-hidden">
-        <a data-proto-id="wallet" href="wallet.html">
-          <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M21 12V7H5a2 2 0 0 1 0-4h14v4"/><path d="M3 5v14a2 2 0 0 0 2 2h16v-5"/><path d="M18 12a2 2 0 0 0 0 4h4v-4Z"/></svg>
-          <span>Wallet</span>
-        </a>
-      </div>
-      <div data-proto-row style="max-height:0; opacity:0; pointer-events:none;" class="transition-all duration-300 ease-out overflow-hidden">
-        <a data-proto-id="cart" href="checkout.html">
-          <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><circle cx="8" cy="21" r="1"/><circle cx="19" cy="21" r="1"/><path d="M2.05 2.05h2l2.66 12.42a2 2 0 0 0 2 1.58h9.78a2 2 0 0 0 1.95-1.57l1.65-7.43H5.12"/></svg>
-          <span>Cart</span>
-        </a>
-      </div>
-      <div data-proto-row style="max-height:0; opacity:0; pointer-events:none;" class="transition-all duration-300 ease-out overflow-hidden">
-        <a data-proto-id="profile" href="profile.html">
-          <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M19 21v-2a4 4 0 0 0-4-4H9a4 4 0 0 0-4 4v2"/><circle cx="12" cy="7" r="4"/></svg>
-          <span>Profile</span>
-        </a>
-      </div>
-    </nav>
-  </div>
+    <div class="grid gap-6 md:grid-cols-3">
+      <section class="rounded-3xl border border-zinc-200 bg-white p-6">
+        <p class="text-xs font-semibold uppercase tracking-[0.18em] text-zinc-500">Buyer Flow</p>
+        <h2 class="mt-2 text-2xl font-bold">Customer journey</h2>
+        <ul class="mt-4 space-y-2 text-sm text-zinc-600">
+          <li>1. Login/Signup as buyer</li>
+          <li>2. Search and browse products</li>
+          <li>3. Checkout and payment demo</li>
+          <li>4. Order success and order tracking</li>
+        </ul>
+        <div class="mt-6 flex flex-wrap gap-3">
+          <a href="login.html?role=buyer" class="px-4 py-2 rounded-full bg-black text-white text-sm font-semibold">Start Buyer Login</a>
+          <a href="buyer/index.html" class="px-4 py-2 rounded-full border border-zinc-300 text-sm font-semibold">Open Buyer Dashboard</a>
+        </div>
+      </section>
 
-  <!-- Main Content -->
-  <div class="min-h-screen flex flex-col">
-    <main class="flex-1 flex items-center justify-center px-4">
-      <div class="text-center max-w-2xl">
-        <h1 class="text-5xl sm:text-6xl md:text-7xl font-extrabold leading-tight text-black mb-6">
-          Hweibo AI Smart Search
-        </h1>
-        <p class="text-xl sm:text-2xl text-black/50 font-medium mb-12">
-          Your minimalist AI shopping companion.
-        </p>
-        <p class="text-sm text-black/50 mb-6">Try a sample prompt:</p>
-        <div class="flex flex-wrap justify-center gap-3">
-          <button class="px-6 py-3 rounded-full bg-black text-white font-semibold hover:bg-zinc-800 transition-colors">
-            I am looking for a pc under 2M TZS
-          </button>
-          <button class="px-6 py-3 rounded-full bg-black/5 border border-black/5 text-sm font-semibold text-black/70 hover:bg-black/10 transition-colors">
-            Running shoes under 500k TZS
-          </button>
-          <button class="px-6 py-3 rounded-full bg-black/5 border border-black/5 text-sm font-semibold text-black/70 hover:bg-black/10 transition-colors">
-            Smartphone with good camera
-          </button>
+      <section class="rounded-3xl border border-zinc-200 bg-white p-6">
+        <p class="text-xs font-semibold uppercase tracking-[0.18em] text-zinc-500">Seller Flow</p>
+        <h2 class="mt-2 text-2xl font-bold">Merchant journey</h2>
+        <ul class="mt-4 space-y-2 text-sm text-zinc-600">
+          <li>1. Login/Signup as seller</li>
+          <li>2. Open seller dashboard</li>
+          <li>3. Manage products and orders</li>
+          <li>4. Track analytics and add products</li>
+        </ul>
+        <div class="mt-6 flex flex-wrap gap-3">
+          <a href="login.html?role=seller" class="px-4 py-2 rounded-full bg-black text-white text-sm font-semibold">Start Seller Login</a>
+          <a href="seller/index.html" class="px-4 py-2 rounded-full border border-zinc-300 text-sm font-semibold">Open Seller Dashboard</a>
+        </div>
+      </section>
+
+      <section class="rounded-3xl border border-zinc-200 bg-white p-6">
+        <p class="text-xs font-semibold uppercase tracking-[0.18em] text-zinc-500">Admin Flow</p>
+        <h2 class="mt-2 text-2xl font-bold">Operations journey</h2>
+        <ul class="mt-4 space-y-2 text-sm text-zinc-600">
+          <li>1. Login as admin</li>
+          <li>2. Open admin dashboard</li>
+          <li>3. Manage user list</li>
+          <li>4. Add demo users by role</li>
+        </ul>
+        <div class="mt-6 flex flex-wrap gap-3">
+          <a href="login.html?role=admin" class="px-4 py-2 rounded-full bg-black text-white text-sm font-semibold">Start Admin Login</a>
+          <a href="admin/index.html" class="px-4 py-2 rounded-full border border-zinc-300 text-sm font-semibold">Open Admin Dashboard</a>
+        </div>
+      </section>
+    </div>
+
+    <section class="mt-8 rounded-3xl border border-zinc-200 bg-white p-6">
+      <h3 class="text-lg font-bold">Demo emails for role routing</h3>
+      <div class="mt-3 grid gap-3 sm:grid-cols-3">
+        <div class="rounded-2xl bg-zinc-50 border border-zinc-200 p-4">
+          <p class="text-xs uppercase tracking-[0.15em] text-zinc-500">Buyer</p>
+          <p class="mt-1 font-semibold">buyer@buyer.hweibo.demo</p>
+        </div>
+        <div class="rounded-2xl bg-zinc-50 border border-zinc-200 p-4">
+          <p class="text-xs uppercase tracking-[0.15em] text-zinc-500">Seller</p>
+          <p class="mt-1 font-semibold">seller@seller.hweibo.demo</p>
+        </div>
+        <div class="rounded-2xl bg-zinc-50 border border-zinc-200 p-4">
+          <p class="text-xs uppercase tracking-[0.15em] text-zinc-500">Admin</p>
+          <p class="mt-1 font-semibold">admin@admin.hweibo.demo</p>
         </div>
       </div>
-    </main>
+    </section>
 
-    <!-- Search Input -->
-    <footer class="bg-white border-t border-black/10 p-4">
-      <div class="max-w-[896px] mx-auto">
-        <div class="flex items-center bg-white rounded-full border border-black/10 shadow-sm px-4 py-2">
-          <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="text-black/40"><circle cx="11" cy="11" r="8"/><path d="m21 21-4.3-4.3"/></svg>
-          <input type="text" placeholder="Describe what you're looking for..." class="flex-1 ml-4 py-3 text-base text-black placeholder:text-black/30 focus:outline-none bg-transparent">
-          <button class="w-10 h-10 rounded-full bg-black flex items-center justify-center hover:bg-black/80 transition-colors">
-            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M5 12h14"/><path d="m12 5 7 7-7 7"/></svg>
-          </button>
-        </div>
-      </div>
-    </footer>
-    <script defer src="proto-nav.js"></script>
-  </div>
+    <div class="mt-8">
+      <a href="landing.html" class="text-sm font-semibold text-zinc-700 hover:text-black">Go to landing page</a>
+    </div>
+  </main>
 </body>
 </html>
