--- a/prototype/login.html
+++ b/prototype/login.html
@@ -12,24 +12,29 @@
 </head>
 <body class="min-h-screen bg-white flex items-center justify-center px-6">
   <div class="w-full max-w-md">
-    <!-- Logo -->
     <div class="text-center mb-8">
-      <a href="landing.html" class="text-sm font-medium font-sans tracking-[0.18em] text-zinc-800">hweibo</a>
+      <a href="index.html" class="text-sm font-medium font-sans tracking-[0.18em] text-zinc-800">hweibo</a>
     </div>
 
-    <!-- Login Form -->
     <div class="bg-white rounded-3xl border border-zinc-200 p-8">
       <h1 class="text-2xl font-bold text-zinc-900 mb-2">Welcome back</h1>
-      <p class="text-zinc-500 mb-6">Log in to your account to continue shopping</p>
+      <p id="roleCopy" class="text-zinc-500 mb-6">Log in to continue</p>
 
-      <form class="space-y-4" onsubmit="event.preventDefault(); window.location.href='search.html';">
+      <div class="mb-6 rounded-2xl border border-zinc-200 bg-zinc-50 p-4 text-sm">
+        <p class="font-semibold text-zinc-800">Demo role emails</p>
+        <p class="mt-2 text-zinc-600">Buyer: <span class="font-medium">buyer@buyer.hweibo.demo</span></p>
+        <p class="text-zinc-600">Seller: <span class="font-medium">seller@seller.hweibo.demo</span></p>
+        <p class="text-zinc-600">Admin: <span class="font-medium">admin@admin.hweibo.demo</span></p>
+      </div>
+
+      <form id="loginForm" class="space-y-4">
         <div>
           <label class="block text-sm font-medium text-zinc-700 mb-1">Email</label>
-          <input type="email" placeholder="you@example.com" class="w-full px-4 py-3 rounded-xl border border-zinc-200 focus:border-black focus:outline-none transition-colors">
+          <input id="emailInput" type="email" placeholder="you@example.com" class="w-full px-4 py-3 rounded-xl border border-zinc-200 focus:border-black focus:outline-none transition-colors" required>
         </div>
         <div>
           <label class="block text-sm font-medium text-zinc-700 mb-1">Password</label>
-          <input type="password" placeholder="••••••••" class="w-full px-4 py-3 rounded-xl border border-zinc-200 focus:border-black focus:outline-none transition-colors">
+          <input type="password" placeholder="••••••••" class="w-full px-4 py-3 rounded-xl border border-zinc-200 focus:border-black focus:outline-none transition-colors" required>
         </div>
         <div class="flex items-center justify-between text-sm">
           <label class="flex items-center gap-2 cursor-pointer">
@@ -43,20 +48,87 @@
         </button>
       </form>
 
+      <div class="mt-4 grid grid-cols-3 gap-2">
+        <button id="buyerFill" type="button" class="py-2 rounded-xl border border-zinc-200 text-sm font-semibold text-zinc-700 hover:border-zinc-400">Use buyer email</button>
+        <button id="sellerFill" type="button" class="py-2 rounded-xl border border-zinc-200 text-sm font-semibold text-zinc-700 hover:border-zinc-400">Use seller email</button>
+        <button id="adminFill" type="button" class="py-2 rounded-xl border border-zinc-200 text-sm font-semibold text-zinc-700 hover:border-zinc-400">Use admin email</button>
+      </div>
+
       <div class="mt-6 text-center">
         <p class="text-sm text-zinc-500">
-          Don't have an account? 
-          <a href="signup.html" class="text-black font-semibold hover:underline">Sign up</a>
+          Don't have an account?
+          <a id="signupLink" href="signup.html?role=buyer" class="text-black font-semibold hover:underline">Sign up</a>
         </p>
       </div>
     </div>
 
-    <!-- Back to home -->
     <div class="mt-8 text-center">
       <a href="landing.html" class="text-sm text-zinc-500 hover:text-black transition-colors">
         ← Back to home
       </a>
     </div>
   </div>
+
+  <script>
+    const params = new URLSearchParams(window.location.search);
+    const rawRole = params.get("role");
+    const requestedRole = rawRole === "seller" || rawRole === "admin" ? rawRole : "buyer";
+    const emailInput = document.getElementById("emailInput");
+    const roleCopy = document.getElementById("roleCopy");
+    const signupLink = document.getElementById("signupLink");
+
+    if (requestedRole === "seller") {
+      roleCopy.textContent = "Log in to access your seller dashboard";
+    } else if (requestedRole === "admin") {
+      roleCopy.textContent = "Log in to access your admin dashboard";
+    } else {
+      roleCopy.textContent = "Log in to continue your buyer journey";
+    }
+    signupLink.href = `signup.html?role=${requestedRole}`;
+
+    if (requestedRole === "seller") {
+      emailInput.value = "seller@seller.hweibo.demo";
+    } else if (requestedRole === "admin") {
+      emailInput.value = "admin@admin.hweibo.demo";
+    } else {
+      emailInput.value = "buyer@buyer.hweibo.demo";
+    }
+
+    document.getElementById("buyerFill").addEventListener("click", () => {
+      emailInput.value = "buyer@buyer.hweibo.demo";
+      emailInput.focus();
+    });
+
+    document.getElementById("sellerFill").addEventListener("click", () => {
+      emailInput.value = "seller@seller.hweibo.demo";
+      emailInput.focus();
+    });
+
+    document.getElementById("adminFill").addEventListener("click", () => {
+      emailInput.value = "admin@admin.hweibo.demo";
+      emailInput.focus();
+    });
+
+    function detectRoleFromEmail(email, fallbackRole) {
+      const value = email.trim().toLowerCase();
+      if (!value) return fallbackRole;
+      if (value.includes("admin") || value.endsWith("@admin.hweibo.demo")) return "admin";
+      if (value.includes("seller") || value.endsWith("@seller.hweibo.demo")) return "seller";
+      if (value.includes("buyer") || value.endsWith("@buyer.hweibo.demo")) return "buyer";
+      return fallbackRole;
+    }
+
+    document.getElementById("loginForm").addEventListener("submit", (event) => {
+      event.preventDefault();
+      const role = detectRoleFromEmail(emailInput.value, requestedRole);
+      if (role === "seller") {
+        window.location.href = "seller/index.html";
+      } else if (role === "admin") {
+        window.location.href = "admin/index.html";
+      } else {
+        window.location.href = "buyer/index.html";
+      }
+    });
+  </script>
 </body>
 </html>
