--- a/prototype/orders.html
+++ b/prototype/orders.html
@@ -3,220 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Orders - Hweibo</title>
-  <script src="https://cdn.tailwindcss.com"></script>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
-  <style>
-    body { font-family: 'Inter', sans-serif; }
-  </style>
+  <title>Redirecting...</title>
+  <meta http-equiv="refresh" content="0; url=buyer/orders.html">
+  <script>window.location.replace('buyer/orders.html');</script>
 </head>
-<body class="min-h-screen bg-white" data-proto-active="orders">
-  <!-- Sidebar -->
-  <a href="index.html" class="fixed left-4 sm:left-6 top-6 z-50 text-sm sm:text-base font-medium font-sans tracking-[0.18em] text-zinc-800 hover:text-black transition-all duration-300">
-    hweibo
-  </a>
-
-  <div class="fixed left-4 sm:left-6 top-1/2 -translate-y-1/2 z-50">
-    <nav data-proto-nav="buyers" class="flex flex-col items-start">
-      <div data-proto-row style="max-height:0; opacity:0; pointer-events:none;" class="transition-all duration-300 ease-out overflow-hidden">
-        <a data-proto-id="search" href="search.html">
-          <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><circle cx="11" cy="11" r="8"/><path d="m21 21-4.3-4.3"/></svg>
-          <span>Search</span>
-        </a>
-      </div>
-      <div data-proto-row style="max-height:0; opacity:0; pointer-events:none;" class="transition-all duration-300 ease-out overflow-hidden">
-        <a data-proto-id="browse" href="browse.html">
-          <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><circle cx="12" cy="12" r="10"/><polygon points="16.24 7.76 14.12 14.12 7.76 16.24 9.88 9.88 16.24 7.76"/></svg>
-          <span>Browse</span>
-        </a>
-      </div>
-      <div data-proto-row style="max-height:0; opacity:0; pointer-events:none;" class="transition-all duration-300 ease-out overflow-hidden">
-        <a data-proto-id="orders" href="orders.html">
-          <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M6 2 3 6v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2V6l-3-4Z"/><path d="M3 6h18"/><path d="M16 10a4 4 0 0 1-8 0"/></svg>
-          <span>Orders</span>
-        </a>
-      </div>
-      <div data-proto-row style="max-height:0; opacity:0; pointer-events:none;" class="transition-all duration-300 ease-out overflow-hidden">
-        <a data-proto-id="wallet" href="wallet.html">
-          <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M21 12V7H5a2 2 0 0 1 0-4h14v4"/><path d="M3 5v14a2 2 0 0 0 2 2h16v-5"/><path d="M18 12a2 2 0 0 0 0 4h4v-4Z"/></svg>
-          <span>Wallet</span>
-        </a>
-      </div>
-      <div data-proto-row style="max-height:0; opacity:0; pointer-events:none;" class="transition-all duration-300 ease-out overflow-hidden">
-        <a data-proto-id="cart" href="checkout.html">
-          <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><circle cx="8" cy="21" r="1"/><circle cx="19" cy="21" r="1"/><path d="M2.05 2.05h2l2.66 12.42a2 2 0 0 0 2 1.58h9.78a2 2 0 0 0 1.95-1.57l1.65-7.43H5.12"/></svg>
-          <span>Cart</span>
-        </a>
-      </div>
-      <div data-proto-row style="max-height:0; opacity:0; pointer-events:none;" class="transition-all duration-300 ease-out overflow-hidden">
-        <a data-proto-id="profile" href="profile.html">
-          <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M19 21v-2a4 4 0 0 0-4-4H9a4 4 0 0 0-4 4v2"/><circle cx="12" cy="7" r="4"/></svg>
-          <span>Profile</span>
-        </a>
-      </div>
-    </nav>
-  </div>
-
-  <!-- Main Content -->
-    <div class="max-w-5xl mx-auto px-4 sm:px-6 lg:px-8 py-10 pl-24 sm:pl-32">
-      <h1 class="text-3xl font-extrabold text-zinc-900 mb-2">Orders</h1>
-      <p class="text-zinc-500 mb-8">Track your orders and view delivery status</p>
-
-     <!-- Delivery Snapshot Map -->
-     <div class="rounded-3xl border border-zinc-200 bg-gradient-to-br from-zinc-50 via-white to-zinc-50 overflow-hidden mb-8">
-       <div class="p-6 sm:p-8">
-         <div class="flex items-start justify-between gap-6">
-           <div>
-             <p class="text-[10px] font-bold uppercase tracking-wider text-zinc-500">Delivery snapshot</p>
-             <h2 class="mt-2 text-xl sm:text-2xl font-extrabold text-zinc-900">Shop to your door</h2>
-             <p class="mt-2 text-sm text-zinc-500">A quick visual route for your latest order.</p>
-           </div>
-           <div class="hidden sm:flex items-center gap-2 rounded-full border border-zinc-200 bg-white px-4 py-2 text-sm font-semibold text-zinc-700">
-             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M10 17h4V5H2v12h3"/><path d="M20 17h2v-3.34a2 2 0 0 0-.59-1.42L18 9h-4v8h2"/><circle cx="7.5" cy="17.5" r="2.5"/><circle cx="17.5" cy="17.5" r="2.5"/></svg>
-             In transit
-           </div>
-         </div>
-
-         <div class="mt-6 grid gap-4 sm:grid-cols-2">
-           <div class="rounded-2xl bg-white/80 backdrop-blur border border-zinc-200 p-4">
-             <div class="flex items-start gap-3">
-               <div class="mt-0.5 flex h-9 w-9 items-center justify-center rounded-xl bg-zinc-900 text-white">
-                 <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M20 10c0 6-8 12-8 12s-8-6-8-12a8 8 0 0 1 16 0Z"/><circle cx="12" cy="10" r="3"/></svg>
-               </div>
-               <div class="min-w-0">
-                 <p class="text-xs font-bold uppercase tracking-wider text-zinc-500">From</p>
-                 <p class="mt-1 font-bold text-zinc-900 truncate">Watch Hub</p>
-                 <p class="text-sm text-zinc-500 truncate">Dar es Salaam</p>
-               </div>
-             </div>
-           </div>
-
-           <div class="rounded-2xl bg-white/80 backdrop-blur border border-zinc-200 p-4">
-             <div class="flex items-start gap-3">
-               <div class="mt-0.5 flex h-9 w-9 items-center justify-center rounded-xl bg-zinc-100 text-zinc-900">
-                 <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="m12 19 7-7 3 3-7 7-3-3Z"/><path d="m18 13-1.5-1.5"/><path d="m2 22 2-2"/><path d="m3 21 1-1"/><path d="M14 10 4 20"/></svg>
-               </div>
-               <div class="min-w-0">
-                 <p class="text-xs font-bold uppercase tracking-wider text-zinc-500">To</p>
-                 <p class="mt-1 font-bold text-zinc-900 truncate">Alexander Hamilton</p>
-                 <p class="text-sm text-zinc-500 truncate">Manhattan, New York</p>
-               </div>
-             </div>
-           </div>
-         </div>
-
-         <div class="mt-6 rounded-2xl border border-zinc-200 bg-white p-4">
-           <svg viewBox="0 0 720 180" class="h-[180px] w-full" aria-label="Delivery route map">
-             <defs>
-               <linearGradient id="route" x1="0" y1="0" x2="1" y2="0">
-                 <stop offset="0%" stop-color="#18181b" />
-                 <stop offset="100%" stop-color="#71717a" />
-               </linearGradient>
-             </defs>
-             <rect x="0" y="0" width="720" height="180" rx="18" fill="#fafafa" />
-             <path d="M90,120 C200,40 310,150 420,70 C510,10 600,40 650,85" fill="none" stroke="url(#route)" stroke-width="3" stroke-dasharray="6 6" />
-             <circle cx="90" cy="120" r="10" fill="#18181b" />
-             <circle cx="90" cy="120" r="22" fill="#18181b" opacity="0.12" />
-             <text x="120" y="126" font-size="12" fill="#3f3f46" font-family="ui-sans-serif, system-ui">Shop</text>
-             <circle cx="650" cy="85" r="10" fill="#a1a1aa" />
-             <circle cx="650" cy="85" r="22" fill="#a1a1aa" opacity="0.18" />
-             <text x="548" y="80" font-size="12" fill="#3f3f46" font-family="ui-sans-serif, system-ui">You</text>
-             <circle cx="420" cy="70" r="6" fill="#18181b" />
-             <text x="436" y="76" font-size="11" fill="#52525b" font-family="ui-sans-serif, system-ui">Courier</text>
-           </svg>
-         </div>
-       </div>
-     </div>
-
-    <!-- Order Tabs -->
-    <div class="flex gap-4 mb-8 border-b border-zinc-200">
-      <button class="pb-4 text-black font-bold border-b-2 border-black">All Orders</button>
-      <button class="pb-4 text-zinc-500 font-medium hover:text-black">Processing</button>
-      <button class="pb-4 text-zinc-500 font-medium hover:text-black">Delivered</button>
-      <button class="pb-4 text-zinc-500 font-medium hover:text-black">Cancelled</button>
-    </div>
-
-    <!-- Orders List -->
-    <div class="space-y-4">
-      <!-- Order 1 -->
-      <div class="bg-white rounded-2xl border border-zinc-200 p-6 hover:shadow-lg transition-shadow">
-        <div class="flex items-start justify-between mb-4">
-          <div>
-            <p class="text-sm text-zinc-500">Order #HW-12345</p>
-            <p class="text-zinc-400 text-sm">Placed on Jan 15, 2024</p>
-          </div>
-          <span class="px-3 py-1 rounded-full bg-yellow-100 text-yellow-700 text-sm font-semibold">In Transit</span>
-        </div>
-        <div class="flex items-center gap-4 mb-4">
-          <img src="https://images.unsplash.com/photo-1523275335684-37898b6baf30?w=100&h=100&fit=crop" alt="Product" class="w-16 h-16 rounded-lg object-cover">
-          <div class="flex-1">
-            <h3 class="font-bold text-zinc-900">Luna Steel Watch</h3>
-            <p class="text-sm text-zinc-500">Qty: 1 · Watch Hub</p>
-          </div>
-          <span class="font-bold text-zinc-900">TZS 285k</span>
-        </div>
-        <div class="flex items-center justify-between pt-4 border-t border-zinc-100">
-          <div class="flex items-center gap-2">
-            <div class="w-2 h-2 bg-yellow-500 rounded-full animate-pulse"></div>
-            <span class="text-sm text-zinc-600">Estimated delivery: Jan 20</span>
-          </div>
-          <button class="text-sm font-semibold text-black hover:underline">Track Order</button>
-        </div>
-      </div>
-
-      <!-- Order 2 -->
-      <div class="bg-white rounded-2xl border border-zinc-200 p-6 hover:shadow-lg transition-shadow">
-        <div class="flex items-start justify-between mb-4">
-          <div>
-            <p class="text-sm text-zinc-500">Order #HW-12344</p>
-            <p class="text-zinc-400 text-sm">Placed on Jan 10, 2024</p>
-          </div>
-          <span class="px-3 py-1 rounded-full bg-green-100 text-green-700 text-sm font-semibold">Delivered</span>
-        </div>
-        <div class="flex items-center gap-4 mb-4">
-          <img src="https://images.unsplash.com/photo-1505740420928-5e560c06d30e?w=100&h=100&fit=crop" alt="Product" class="w-16 h-16 rounded-lg object-cover">
-          <div class="flex-1">
-            <h3 class="font-bold text-zinc-900">Studio Pro Wireless</h3>
-            <p class="text-sm text-zinc-500">Qty: 1 · Audio Center</p>
-          </div>
-          <span class="font-bold text-zinc-900">TZS 420k</span>
-        </div>
-        <div class="flex items-center justify-between pt-4 border-t border-zinc-100">
-          <div class="flex items-center gap-2">
-            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="text-green-600"><path d="M20 6 9 17l-5-5"/></svg>
-            <span class="text-sm text-zinc-600">Delivered on Jan 14</span>
-          </div>
-          <button class="text-sm font-semibold text-black hover:underline">View Details</button>
-        </div>
-      </div>
-
-      <!-- Order 3 -->
-      <div class="bg-white rounded-2xl border border-zinc-200 p-6 hover:shadow-lg transition-shadow">
-        <div class="flex items-start justify-between mb-4">
-          <div>
-            <p class="text-sm text-zinc-500">Order #HW-12340</p>
-            <p class="text-zinc-400 text-sm">Placed on Jan 5, 2024</p>
-          </div>
-          <span class="px-3 py-1 rounded-full bg-green-100 text-green-700 text-sm font-semibold">Delivered</span>
-        </div>
-        <div class="flex items-center gap-4 mb-4">
-          <img src="https://images.unsplash.com/photo-1542291026-7eec264c27ff?w=100&h=100&fit=crop" alt="Product" class="w-16 h-16 rounded-lg object-cover">
-          <div class="flex-1">
-            <h3 class="font-bold text-zinc-900">Aero Sprint V2</h3>
-            <p class="text-sm text-zinc-500">Qty: 2 · Sport World</p>
-          </div>
-          <span class="font-bold text-zinc-900">TZS 290k</span>
-        </div>
-        <div class="flex items-center justify-between pt-4 border-t border-zinc-100">
-          <div class="flex items-center gap-2">
-            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="text-green-600"><path d="M20 6 9 17l-5-5"/></svg>
-            <span class="text-sm text-zinc-600">Delivered on Jan 8</span>
-          </div>
-          <button class="text-sm font-semibold text-black hover:underline">View Details</button>
-        </div>
-      </div>
-    </div>
-  </div>
-  <script defer src="proto-nav.js"></script>
+<body>
+  <p>Redirecting to <a href="buyer/orders.html">buyer/orders.html</a>...</p>
 </body>
 </html>
