--- a/prototype/profile.html
+++ b/prototype/profile.html
@@ -3,187 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Profile - Hweibo</title>
-  <script src="https://cdn.tailwindcss.com"></script>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
-  <style>
-    body { font-family: 'Inter', sans-serif; }
-  </style>
+  <title>Redirecting...</title>
+  <meta http-equiv="refresh" content="0; url=buyer/profile.html">
+  <script>window.location.replace('buyer/profile.html');</script>
 </head>
-<body class="min-h-screen bg-zinc-50/50" data-proto-active="profile">
-  <!-- Sidebar -->
-  <a href="index.html" class="fixed left-4 sm:left-6 top-6 z-50 text-sm sm:text-base font-medium font-sans tracking-[0.18em] text-zinc-800 hover:text-black transition-all duration-300">
-    hweibo
-  </a>
-
-  <div class="fixed left-4 sm:left-6 top-1/2 -translate-y-1/2 z-50">
-    <nav data-proto-nav="buyers" class="flex flex-col items-start">
-      <div data-proto-row style="max-height:0; opacity:0; pointer-events:none;" class="transition-all duration-300 ease-out overflow-hidden">
-        <a data-proto-id="search" href="search.html">
-          <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><circle cx="11" cy="11" r="8"/><path d="m21 21-4.3-4.3"/></svg>
-          <span>Search</span>
-        </a>
-      </div>
-      <div data-proto-row style="max-height:0; opacity:0; pointer-events:none;" class="transition-all duration-300 ease-out overflow-hidden">
-        <a data-proto-id="browse" href="browse.html">
-          <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><circle cx="12" cy="12" r="10"/><polygon points="16.24 7.76 14.12 14.12 7.76 16.24 9.88 9.88 16.24 7.76"/></svg>
-          <span>Browse</span>
-        </a>
-      </div>
-      <div data-proto-row style="max-height:0; opacity:0; pointer-events:none;" class="transition-all duration-300 ease-out overflow-hidden">
-        <a data-proto-id="orders" href="orders.html">
-          <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M6 2 3 6v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2V6l-3-4Z"/><path d="M3 6h18"/><path d="M16 10a4 4 0 0 1-8 0"/></svg>
-          <span>Orders</span>
-        </a>
-      </div>
-      <div data-proto-row style="max-height:0; opacity:0; pointer-events:none;" class="transition-all duration-300 ease-out overflow-hidden">
-        <a data-proto-id="wallet" href="wallet.html">
-          <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M21 12V7H5a2 2 0 0 1 0-4h14v4"/><path d="M3 5v14a2 2 0 0 0 2 2h16v-5"/><path d="M18 12a2 2 0 0 0 0 4h4v-4Z"/></svg>
-          <span>Wallet</span>
-        </a>
-      </div>
-      <div data-proto-row style="max-height:0; opacity:0; pointer-events:none;" class="transition-all duration-300 ease-out overflow-hidden">
-        <a data-proto-id="cart" href="checkout.html">
-          <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><circle cx="8" cy="21" r="1"/><circle cx="19" cy="21" r="1"/><path d="M2.05 2.05h2l2.66 12.42a2 2 0 0 0 2 1.58h9.78a2 2 0 0 0 1.95-1.57l1.65-7.43H5.12"/></svg>
-          <span>Cart</span>
-        </a>
-      </div>
-      <div data-proto-row style="max-height:0; opacity:0; pointer-events:none;" class="transition-all duration-300 ease-out overflow-hidden">
-        <a data-proto-id="profile" href="profile.html">
-          <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M19 21v-2a4 4 0 0 0-4-4H9a4 4 0 0 0-4 4v2"/><circle cx="12" cy="7" r="4"/></svg>
-          <span>Profile</span>
-        </a>
-      </div>
-    </nav>
-  </div>
-
-  <!-- Main Content -->
-  <div class="max-w-5xl mx-auto px-4 sm:px-6 lg:px-8 py-10 pl-24 sm:pl-32">
-    <!-- Header -->
-    <div class="flex items-start justify-between mb-10">
-      <div>
-        <h1 class="text-3xl font-extrabold text-zinc-900">Profile</h1>
-        <p class="text-zinc-500 mt-2">Manage your account and preferences</p>
-      </div>
-      <button class="px-4 py-2 rounded-full border border-zinc-200 flex items-center gap-2 text-sm font-semibold hover:bg-zinc-50">
-        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M11 4H4a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2v-7"/><path d="M18.5 2.5a2.121 2.121 0 0 1 3 3L12 15l-4 1 1-4 9.5-9.5z"/></svg>
-        Edit Profile
-      </button>
-    </div>
-
-    <!-- Profile Card -->
-    <div class="bg-white rounded-3xl border border-zinc-200 p-8 mb-8">
-      <div class="flex items-center gap-6">
-        <div class="w-24 h-24 rounded-full bg-gradient-to-br from-zinc-200 to-zinc-300 flex items-center justify-center">
-          <svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="text-zinc-500"><path d="M19 21v-2a4 4 0 0 0-4-4H9a4 4 0 0 0-4 4v2"/><circle cx="12" cy="7" r="4"/></svg>
-        </div>
-        <div class="flex-1">
-          <h2 class="text-2xl font-bold text-zinc-900">Alexander Hamilton</h2>
-          <p class="text-zinc-500 flex items-center gap-2 mt-1">
-            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><rect width="20" height="16" x="2" y="4" rx="2"/><path d="m22 7-8.97 5.7a1.94 1.94 0 0 1-2.06 0L2 7"/></svg>
-            alex@hweibo.com
-          </p>
-          <p class="text-zinc-400 text-sm mt-2">Member since January 2024</p>
-        </div>
-        <div class="hidden sm:block">
-          <div class="flex items-center gap-2 text-green-600 bg-green-50 px-4 py-2 rounded-full">
-            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M20 13c0 5-3.5 7.5-7.66 8.95a1 1 0 0 1-.67-.01C7.5 20.5 4 18 4 13V6a1 1 0 0 1 1-1c2 0 4.5-1.2 6.24-2.72a1.17 1.17 0 0 1 1.52 0C14.51 3.81 17 5 19 5a1 1 0 0 1 1 1z"/><path d="m9 12 2 2 4-4"/></svg>
-            <span class="text-sm font-semibold">Verified</span>
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <!-- Profile Sections Grid -->
-    <div class="grid grid-cols-1 md:grid-cols-2 gap-4 mb-8">
-      <!-- Contact Info -->
-      <div class="group bg-white rounded-2xl border border-zinc-200 p-6 hover:border-zinc-400 hover:shadow-lg transition-all duration-500">
-        <div class="flex items-center gap-4 mb-4">
-          <div class="w-12 h-12 rounded-xl bg-zinc-100 flex items-center justify-center group-hover:bg-black group-hover:text-white transition-all duration-500">
-            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M22 16.92v3a2 2 0 0 1-2.18 2 19.79 19.79 0 0 1-8.63-3.07 19.5 19.5 0 0 1-6-6 19.79 19.79 0 0 1-3.07-8.67A2 2 0 0 1 4.11 2h3a2 2 0 0 1 2 1.72 12.84 12.84 0 0 0 .7 2.81 2 2 0 0 1-.45 2.11L8.09 9.91a16 16 0 0 0 6 6l1.27-1.27a2 2 0 0 1 2.11-.45 12.84 12.84 0 0 0 2.81.7A2 2 0 0 1 22 16.92z"/></svg>
-          </div>
-          <h3 class="text-lg font-bold text-zinc-900">Contact Information</h3>
-        </div>
-        <div class="space-y-2 text-zinc-600">
-          <p class="flex items-center gap-2">
-            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="text-zinc-400"><path d="M22 16.92v3a2 2 0 0 1-2.18 2 19.79 19.79 0 0 1-8.63-3.07 19.5 19.5 0 0 1-6-6 19.79 19.79 0 0 1-3.07-8.67A2 2 0 0 1 4.11 2h3a2 2 0 0 1 2 1.72 12.84 12.84 0 0 0 .7 2.81 2 2 0 0 1-.45 2.11L8.09 9.91a16 16 0 0 0 6 6l1.27-1.27a2 2 0 0 1 2.11-.45 12.84 12.84 0 0 0 2.81.7A2 2 0 0 1 22 16.92z"/></svg>
-            +255 712 345 678
-          </p>
-          <p class="flex items-center gap-2">
-            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="text-zinc-400"><path d="M20 10c0 6-8 12-8 12s-8-6-8-12a8 8 0 0 1 16 0Z"/><circle cx="12" cy="10" r="3"/></svg>
-            Manhattan, New York
-          </p>
-        </div>
-      </div>
-
-      <!-- Orders -->
-      <div class="group bg-white rounded-2xl border border-zinc-200 p-6 hover:border-zinc-400 hover:shadow-lg transition-all duration-500">
-        <div class="flex items-center gap-4 mb-4">
-          <div class="w-12 h-12 rounded-xl bg-zinc-100 flex items-center justify-center group-hover:bg-black group-hover:text-white transition-all duration-500">
-            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="m7.5 4.27 9 5.15"/><path d="M21 8a2 2 0 0 0-1-1.73l-7-4a2 2 0 0 0-2 0l-7 4A2 2 0 0 0 3 8v8a2 2 0 0 0 1 1.73l7 4a2 2 0 0 0 2 0l7-4A2 2 0 0 0 21 16Z"/><path d="m3.3 7 8.7 5 8.7-5"/><path d="M12 22V12"/></svg>
-          </div>
-          <h3 class="text-lg font-bold text-zinc-900">Orders</h3>
-        </div>
-        <div class="flex items-center justify-between">
-          <div>
-            <p class="text-2xl font-bold text-zinc-900">12</p>
-            <p class="text-sm text-zinc-500">Total Orders</p>
-          </div>
-          <div>
-            <p class="text-2xl font-bold text-zinc-900">3</p>
-            <p class="text-sm text-zinc-500">In Transit</p>
-          </div>
-          <div>
-            <p class="text-2xl font-bold text-green-600">9</p>
-            <p class="text-sm text-zinc-500">Delivered</p>
-          </div>
-        </div>
-      </div>
-
-      <!-- Wishlist -->
-      <div class="group bg-white rounded-2xl border border-zinc-200 p-6 hover:border-zinc-400 hover:shadow-lg transition-all duration-500">
-        <div class="flex items-center gap-4 mb-4">
-          <div class="w-12 h-12 rounded-xl bg-zinc-100 flex items-center justify-center group-hover:bg-black group-hover:text-white transition-all duration-500">
-            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M19 14c1.49-1.46 3-3.21 3-5.5A5.5 5.5 0 0 0 16.5 3c-1.76 0-3 .5-4.5 2-1.5-1.5-2.74-2-4.5-2A5.5 5.5 0 0 0 2 8.5c0 2.3 1.5 4.05 3 5.5l7 7Z"/></svg>
-          </div>
-          <h3 class="text-lg font-bold text-zinc-900">Wishlist</h3>
-        </div>
-        <div class="flex items-center justify-between">
-          <div>
-            <p class="text-2xl font-bold text-zinc-900">8</p>
-            <p class="text-sm text-zinc-500">Saved Items</p>
-          </div>
-          <button class="px-4 py-2 rounded-full border border-zinc-200 text-sm font-semibold hover:bg-zinc-50">View All</button>
-        </div>
-      </div>
-
-      <!-- Payment Methods -->
-      <div class="group bg-white rounded-2xl border border-zinc-200 p-6 hover:border-zinc-400 hover:shadow-lg transition-all duration-500">
-        <div class="flex items-center gap-4 mb-4">
-          <div class="w-12 h-12 rounded-xl bg-zinc-100 flex items-center justify-center group-hover:bg-black group-hover:text-white transition-all duration-500">
-            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><rect width="20" height="14" x="2" y="5" rx="2"/><line x1="2" x2="22" y1="10" y2="10"/></svg>
-          </div>
-          <h3 class="text-lg font-bold text-zinc-900">Payment Methods</h3>
-        </div>
-        <div class="space-y-2">
-          <div class="flex items-center gap-3">
-            <div class="w-8 h-5 bg-zinc-800 rounded"></div>
-            <span class="text-sm">•••• 4242</span>
-            <span class="text-xs bg-zinc-100 px-2 py-1 rounded">Default</span>
-          </div>
-          <button class="text-zinc-500 hover:text-black text-sm">+ Add new card</button>
-        </div>
-      </div>
-    </div>
-
-    <!-- Logout -->
-    <div class="flex justify-center">
-      <button class="px-6 py-2 rounded-full border border-red-200 text-red-600 hover:text-red-700 hover:bg-red-50 flex items-center gap-2 text-sm font-semibold">
-        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M9 21H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h4"/><polyline points="16 17 21 12 16 7"/><line x1="21" x2="9" y1="12" y2="12"/></svg>
-        Sign Out
-      </button>
-    </div>
-  </div>
-  <script defer src="proto-nav.js"></script>
+<body>
+  <p>Redirecting to <a href="buyer/profile.html">buyer/profile.html</a>...</p>
 </body>
 </html>
