--- a/prototype/sellers.html
+++ b/prototype/sellers.html
@@ -3,130 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Seller Dashboard - hweibo</title>
-  <script src="https://cdn.tailwindcss.com"></script>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
-  <style>
-    body { font-family: 'Inter', sans-serif; }
-  </style>
+  <title>Redirecting...</title>
+  <meta http-equiv="refresh" content="0; url=seller/index.html">
+  <script>window.location.replace('seller/index.html');</script>
 </head>
-
-<body class="min-h-screen bg-white">
-  <!-- Logo -->
-  <a href="landing.html" class="fixed left-4 sm:left-6 top-6 z-50 text-sm sm:text-base font-medium font-sans tracking-[0.18em] text-zinc-800 hover:text-black transition-all duration-300">
-    hweibo
-  </a>
-
-  <!-- Seller Sidebar (active + neighbors) -->
-  <div class="fixed left-4 sm:left-6 top-1/2 -translate-y-1/2 z-50">
-    <nav class="group flex flex-col items-start">
-      <a href="sellers.html" class="flex items-center gap-3 text-base sm:text-lg whitespace-nowrap py-1.5 text-black font-bold">
-        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><rect width="7" height="9" x="3" y="3" rx="1" /><rect width="7" height="5" x="14" y="3" rx="1" /><rect width="7" height="9" x="14" y="12" rx="1" /><rect width="7" height="5" x="3" y="16" rx="1" /></svg>
-        <span>Dashboard</span>
-      </a>
-      <a href="sellers-products.html" class="flex items-center gap-3 text-base sm:text-lg whitespace-nowrap py-1.5 text-zinc-400 hover:text-black hover:font-bold font-medium">
-        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M11 21.73a2 2 0 0 0 2 0l7-4A2 2 0 0 0 21 16V8a2 2 0 0 0-1-1.73l-7-4a2 2 0 0 0-2 0l-7 4A2 2 0 0 0 3 8v8a2 2 0 0 0 1 1.73z" /><path d="M12 22V12" /><polyline points="3.29 7 12 12 20.71 7" /><path d="m7.5 4.27 9 5.15" /></svg>
-        <span>Products</span>
-      </a>
-
-      <div class="flex flex-col items-start gap-1 overflow-hidden max-h-0 opacity-0 group-hover:max-h-64 group-hover:opacity-100 transition-all duration-300 ease-out">
-        <a href="sellers-orders.html" class="flex items-center gap-3 text-base sm:text-lg whitespace-nowrap py-1.5 text-zinc-400 hover:text-black hover:font-bold font-medium">
-          <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><rect width="8" height="4" x="8" y="2" rx="1" ry="1" /><path d="M16 4h2a2 2 0 0 1 2 2v14a2 2 0 0 1-2 2H6a2 2 0 0 1-2-2V6a2 2 0 0 1 2-2h2" /><path d="M12 11h4" /><path d="M12 16h4" /><path d="M8 11h.01" /><path d="M8 16h.01" /></svg>
-          <span>Orders</span>
-        </a>
-        <a href="sellers-analytics.html" class="flex items-center gap-3 text-base sm:text-lg whitespace-nowrap py-1.5 text-zinc-400 hover:text-black hover:font-bold font-medium">
-          <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M16 7h6v6" /><path d="m22 7-8.5 8.5-5-5L2 17" /></svg>
-          <span>Analytics</span>
-        </a>
-        <a href="sellers-new-product.html" class="flex items-center gap-3 text-base sm:text-lg whitespace-nowrap py-1.5 text-zinc-400 hover:text-black hover:font-bold font-medium">
-          <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M5 12h14" /><path d="M12 5v14" /></svg>
-          <span>New product</span>
-        </a>
-
-        <a href="search.html" class="flex items-center gap-3 text-base sm:text-lg whitespace-nowrap py-1.5 text-zinc-400 hover:text-black hover:font-bold font-medium">
-          <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M8 3 4 7l4 4" /><path d="M4 7h16" /><path d="m16 21 4-4-4-4" /><path d="M20 17H4" /></svg>
-          <span>Buyer view</span>
-        </a>
-      </div>
-    </nav>
-  </div>
-
-  <!-- Main Content -->
-  <main class="max-w-6xl mx-auto px-4 sm:px-6 lg:px-8 py-10 pl-24 sm:pl-32">
-    <div class="flex items-start justify-between gap-6">
-      <div>
-        <h1 class="text-3xl font-extrabold text-zinc-900">Seller dashboard</h1>
-        <p class="mt-2 text-zinc-500">Track revenue, orders, and inventory at a glance.</p>
-      </div>
-      <a href="sellers-new-product.html" class="px-5 py-3 rounded-full bg-black text-white font-semibold hover:bg-zinc-800 transition-colors">
-        Add product
-      </a>
-    </div>
-
-    <div class="mt-8 grid gap-4 sm:grid-cols-2 lg:grid-cols-3">
-      <div class="rounded-3xl border border-zinc-200 bg-zinc-50 p-6">
-        <p class="text-[10px] font-bold uppercase tracking-wider text-zinc-500">Revenue (30d)</p>
-        <p class="mt-2 text-3xl font-extrabold text-zinc-900">TZS 8.4M</p>
-        <p class="mt-2 text-sm text-zinc-500">+12% vs last month</p>
-      </div>
-      <div class="rounded-3xl border border-zinc-200 bg-zinc-50 p-6">
-        <p class="text-[10px] font-bold uppercase tracking-wider text-zinc-500">Orders</p>
-        <p class="mt-2 text-3xl font-extrabold text-zinc-900">46</p>
-        <p class="mt-2 text-sm text-zinc-500">7 in progress</p>
-      </div>
-      <div class="rounded-3xl border border-zinc-200 bg-zinc-50 p-6">
-        <p class="text-[10px] font-bold uppercase tracking-wider text-zinc-500">Inventory</p>
-        <p class="mt-2 text-3xl font-extrabold text-zinc-900">128</p>
-        <p class="mt-2 text-sm text-zinc-500">items in stock</p>
-      </div>
-    </div>
-
-    <div class="mt-10 grid gap-4 lg:grid-cols-2">
-      <div class="rounded-3xl border border-zinc-200 bg-white p-6">
-        <div class="flex items-center justify-between">
-          <h2 class="text-lg font-extrabold text-zinc-900">Latest orders</h2>
-          <a href="sellers-orders.html" class="text-sm font-semibold text-zinc-600 hover:text-black">View all</a>
-        </div>
-        <div class="mt-5 space-y-3">
-          <div class="flex items-center justify-between rounded-2xl bg-zinc-50 border border-zinc-100 p-4">
-            <div>
-              <p class="font-bold text-zinc-900">#HW-9F22</p>
-              <p class="text-sm text-zinc-500">1 item · Dar es Salaam</p>
-            </div>
-            <span class="text-sm font-bold text-zinc-900">TZS 285k</span>
-          </div>
-          <div class="flex items-center justify-between rounded-2xl bg-zinc-50 border border-zinc-100 p-4">
-            <div>
-              <p class="font-bold text-zinc-900">#HW-9F1C</p>
-              <p class="text-sm text-zinc-500">2 items · Arusha</p>
-            </div>
-            <span class="text-sm font-bold text-zinc-900">TZS 490k</span>
-          </div>
-          <div class="flex items-center justify-between rounded-2xl bg-zinc-50 border border-zinc-100 p-4">
-            <div>
-              <p class="font-bold text-zinc-900">#HW-9EBA</p>
-              <p class="text-sm text-zinc-500">1 item · Mwanza</p>
-            </div>
-            <span class="text-sm font-bold text-zinc-900">TZS 420k</span>
-          </div>
-        </div>
-      </div>
-
-      <div class="rounded-3xl border border-zinc-200 bg-white p-6">
-        <div class="flex items-center justify-between">
-          <h2 class="text-lg font-extrabold text-zinc-900">Performance</h2>
-          <a href="sellers-analytics.html" class="text-sm font-semibold text-zinc-600 hover:text-black">Details</a>
-        </div>
-        <div class="mt-6 rounded-2xl border border-zinc-200 bg-zinc-50 p-4">
-          <svg viewBox="0 0 420 140" class="h-[140px] w-full" aria-label="Revenue chart">
-            <rect x="0" y="0" width="420" height="140" rx="16" fill="#fafafa" />
-            <path d="M20 105 C 80 30, 140 120, 210 55 S 320 30, 400 65" fill="none" stroke="#18181b" stroke-width="3" />
-            <circle cx="210" cy="55" r="5" fill="#18181b" />
-            <text x="20" y="22" font-size="12" fill="#52525b" font-family="ui-sans-serif, system-ui">Last 30 days</text>
-          </svg>
-        </div>
-      </div>
-    </div>
-  </main>
+<body>
+  <p>Redirecting to <a href="seller/index.html">seller/index.html</a>...</p>
 </body>
 </html>
