--- a/prototype/signup.html
+++ b/prototype/signup.html
@@ -12,41 +12,47 @@
 </head>
 <body class="min-h-screen bg-white flex items-center justify-center px-6">
   <div class="w-full max-w-md">
-    <!-- Logo -->
     <div class="text-center mb-8">
-      <a href="landing.html" class="text-sm font-medium font-sans tracking-[0.18em] text-zinc-800">hweibo</a>
+      <a href="index.html" class="text-sm font-medium font-sans tracking-[0.18em] text-zinc-800">hweibo</a>
     </div>
 
-    <!-- Signup Form -->
     <div class="bg-white rounded-3xl border border-zinc-200 p-8">
       <h1 class="text-2xl font-bold text-zinc-900 mb-2">Create an account</h1>
-      <p class="text-zinc-500 mb-6">Join Hweibo and start shopping smarter</p>
+      <p class="text-zinc-500 mb-6">Choose role and start your flow</p>
 
-      <form class="space-y-4" onsubmit="event.preventDefault(); window.location.href='search.html';">
+      <form id="signupForm" class="space-y-4">
+        <div>
+          <label class="block text-sm font-medium text-zinc-700 mb-1">Account Type</label>
+          <select id="accountRole" class="w-full px-4 py-3 rounded-xl border border-zinc-200 focus:border-black focus:outline-none transition-colors">
+            <option value="buyer">Buyer / Customer</option>
+            <option value="seller">Seller / Merchant</option>
+            <option value="admin">Admin / Operations</option>
+          </select>
+        </div>
         <div class="grid grid-cols-2 gap-4">
           <div>
             <label class="block text-sm font-medium text-zinc-700 mb-1">First Name</label>
-            <input type="text" placeholder="John" class="w-full px-4 py-3 rounded-xl border border-zinc-200 focus:border-black focus:outline-none transition-colors">
+            <input type="text" placeholder="John" class="w-full px-4 py-3 rounded-xl border border-zinc-200 focus:border-black focus:outline-none transition-colors" required>
           </div>
           <div>
             <label class="block text-sm font-medium text-zinc-700 mb-1">Last Name</label>
-            <input type="text" placeholder="Doe" class="w-full px-4 py-3 rounded-xl border border-zinc-200 focus:border-black focus:outline-none transition-colors">
+            <input type="text" placeholder="Doe" class="w-full px-4 py-3 rounded-xl border border-zinc-200 focus:border-black focus:outline-none transition-colors" required>
           </div>
         </div>
         <div>
           <label class="block text-sm font-medium text-zinc-700 mb-1">Email</label>
-          <input type="email" placeholder="you@example.com" class="w-full px-4 py-3 rounded-xl border border-zinc-200 focus:border-black focus:outline-none transition-colors">
+          <input id="signupEmail" type="email" placeholder="you@example.com" class="w-full px-4 py-3 rounded-xl border border-zinc-200 focus:border-black focus:outline-none transition-colors" required>
         </div>
         <div>
           <label class="block text-sm font-medium text-zinc-700 mb-1">Phone</label>
-          <input type="tel" placeholder="+255 712 345 678" class="w-full px-4 py-3 rounded-xl border border-zinc-200 focus:border-black focus:outline-none transition-colors">
+          <input type="tel" placeholder="+255 712 345 678" class="w-full px-4 py-3 rounded-xl border border-zinc-200 focus:border-black focus:outline-none transition-colors" required>
         </div>
         <div>
           <label class="block text-sm font-medium text-zinc-700 mb-1">Password</label>
-          <input type="password" placeholder="••••••••" class="w-full px-4 py-3 rounded-xl border border-zinc-200 focus:border-black focus:outline-none transition-colors">
+          <input type="password" placeholder="••••••••" class="w-full px-4 py-3 rounded-xl border border-zinc-200 focus:border-black focus:outline-none transition-colors" required>
         </div>
         <div class="flex items-start gap-2">
-          <input type="checkbox" class="mt-1 rounded border-zinc-300">
+          <input type="checkbox" class="mt-1 rounded border-zinc-300" required>
           <span class="text-sm text-zinc-600">I agree to the <a href="#" class="text-black font-medium hover:underline">Terms of Service</a> and <a href="#" class="text-black font-medium hover:underline">Privacy Policy</a></span>
         </div>
         <button type="submit" class="w-full py-3 bg-black text-white font-semibold rounded-full hover:bg-zinc-800 transition-colors">
@@ -56,18 +62,48 @@
 
       <div class="mt-6 text-center">
         <p class="text-sm text-zinc-500">
-          Already have an account? 
-          <a href="login.html" class="text-black font-semibold hover:underline">Log in</a>
+          Already have an account?
+          <a id="loginLink" href="login.html?role=buyer" class="text-black font-semibold hover:underline">Log in</a>
         </p>
       </div>
     </div>
 
-    <!-- Back to home -->
     <div class="mt-8 text-center">
       <a href="landing.html" class="text-sm text-zinc-500 hover:text-black transition-colors">
         ← Back to home
       </a>
     </div>
   </div>
+
+  <script>
+    const params = new URLSearchParams(window.location.search);
+    const rawRole = params.get("role");
+    const requestedRole = rawRole === "seller" || rawRole === "admin" ? rawRole : "buyer";
+    const roleInput = document.getElementById("accountRole");
+    const loginLink = document.getElementById("loginLink");
+    const signupEmail = document.getElementById("signupEmail");
+
+    roleInput.value = requestedRole;
+    loginLink.href = `login.html?role=${requestedRole}`;
+    if (requestedRole === "seller") {
+      signupEmail.value = "seller@seller.hweibo.demo";
+    } else if (requestedRole === "admin") {
+      signupEmail.value = "admin@admin.hweibo.demo";
+    } else {
+      signupEmail.value = "buyer@buyer.hweibo.demo";
+    }
+
+    document.getElementById("signupForm").addEventListener("submit", (event) => {
+      event.preventDefault();
+      const role = roleInput.value === "seller" || roleInput.value === "admin" ? roleInput.value : "buyer";
+      if (role === "seller") {
+        window.location.href = "seller/index.html";
+      } else if (role === "admin") {
+        window.location.href = "admin/index.html";
+      } else {
+        window.location.href = "buyer/index.html";
+      }
+    });
+  </script>
 </body>
 </html>
