--- a/prototype/admin/index.html
+++ b/prototype/admin/index.html
@@ -19,6 +19,7 @@
     <nav data-admin-nav class="flex flex-col items-start">
       <a data-admin-id="dashboard" href="index.html"><span>Dashboard</span></a>
       <a data-admin-id="users" href="users.html"><span>Users</span></a>
+      <a data-admin-id="categories" href="categories.html"><span>Categories</span></a>
       <a data-admin-id="new-user" href="new-user.html"><span>Add user</span></a>
       <a data-admin-id="seller-view" href="../seller/index.html"><span>Seller view</span></a>
       <a data-admin-id="buyer-view" href="../buyer/search.html"><span>Buyer view</span></a>
@@ -46,9 +47,9 @@
         <p class="mt-2 text-sm text-zinc-500">Verified seller accounts</p>
       </div>
       <div class="rounded-3xl border border-zinc-200 bg-zinc-50 p-6">
-        <p class="text-[10px] font-bold uppercase tracking-wider text-zinc-500">Pending checks</p>
-        <p id="pendingChecks" class="mt-2 text-3xl font-extrabold text-zinc-900">0</p>
-        <p class="mt-2 text-sm text-zinc-500">Accounts pending review</p>
+        <p class="text-[10px] font-bold uppercase tracking-wider text-zinc-500">Categories managed</p>
+        <p id="categoriesCount" class="mt-2 text-3xl font-extrabold text-zinc-900">0</p>
+        <p class="mt-2 text-sm text-zinc-500">Used by seller product forms</p>
       </div>
     </div>
 
@@ -94,6 +95,17 @@
         </div>
       </section>
     </div>
+
+    <section class="mt-4 rounded-3xl border border-zinc-200 bg-white p-6">
+      <div class="flex items-center justify-between gap-4">
+        <div>
+          <h2 class="text-lg font-extrabold text-zinc-900">Product categories</h2>
+          <p class="text-sm text-zinc-500 mt-1">Manage what sellers can pick when adding products.</p>
+        </div>
+        <a href="categories.html" class="px-4 py-2 rounded-full border border-zinc-200 text-sm font-semibold text-zinc-700 hover:border-zinc-400">Manage categories</a>
+      </div>
+      <div id="managedCategories" class="mt-4 flex flex-wrap gap-2"></div>
+    </section>
   </main>
 
   <script defer src="admin-demo.js"></script>
@@ -101,12 +113,13 @@
   <script>
     window.addEventListener("DOMContentLoaded", () => {
       const users = window.AdminDemo.readUsers();
+      const categories = window.AdminDemo.readCategories();
       const summary = window.AdminDemo.getSummary(users);
       const total = Math.max(1, summary.total);
 
       document.getElementById("totalUsers").textContent = summary.total;
       document.getElementById("activeSellers").textContent = summary.sellers;
-      document.getElementById("pendingChecks").textContent = Math.max(1, Math.round(summary.total * 0.12));
+      document.getElementById("categoriesCount").textContent = categories.length;
 
       const recentUsers = document.getElementById("recentUsers");
       recentUsers.innerHTML = users.slice(0, 5).map((user) => `
@@ -129,6 +142,11 @@
       document.getElementById("buyersBar").style.width = `${buyersPct}%`;
       document.getElementById("sellersBar").style.width = `${sellersPct}%`;
       document.getElementById("adminsBar").style.width = `${adminsPct}%`;
+
+      const categoryWrap = document.getElementById("managedCategories");
+      categoryWrap.innerHTML = categories.map((category) => `
+        <span class="px-3 py-1 rounded-full border border-zinc-200 bg-zinc-50 text-sm font-medium text-zinc-700">${category}</span>
+      `).join("");
     });
   </script>
 </body>
