--- a/prototype/admin/users.html
+++ b/prototype/admin/users.html
@@ -17,6 +17,7 @@
     <nav data-admin-nav class="flex flex-col items-start">
       <a data-admin-id="dashboard" href="index.html"><span>Dashboard</span></a>
       <a data-admin-id="users" href="users.html"><span>Users</span></a>
+      <a data-admin-id="categories" href="categories.html"><span>Categories</span></a>
       <a data-admin-id="new-user" href="new-user.html"><span>Add user</span></a>
       <a data-admin-id="seller-view" href="../seller/index.html"><span>Seller view</span></a>
       <a data-admin-id="buyer-view" href="../buyer/search.html"><span>Buyer view</span></a>
