--- a/prototype/buyer/search.html
+++ b/prototype/buyer/search.html
@@ -223,7 +223,30 @@
       return { matches: topMatches, category, budget };
     }
 
+    function specsForProduct(product) {
+      const byId = {
+        "lap-ideapad": ["Intel Core i5", "16GB RAM", "512GB SSD", "14-inch FHD display"],
+        "lap-zenbook": ["Intel Core i7", "16GB RAM", "512GB SSD", "14-inch OLED display"],
+        "lap-xps17": ["Intel Core i9", "32GB RAM", "1TB SSD", "17-inch UHD display"],
+        "lap-legion": ["Ryzen 7", "16GB RAM", "1TB SSD", "RTX-series graphics"],
+        "shoe-airmax": ["Air-cushion sole", "Breathable mesh upper", "Rubber traction outsole"],
+        "shoe-puma": ["Lightweight foam midsole", "Breathable upper", "Road-ready grip"],
+        "shoe-galaxy": ["Cloudfoam comfort", "Textile upper", "Daily trainer support"],
+        "shoe-balance": ["Soft foam cushioning", "Stability heel support", "Long-run comfort"],
+        "phone-iphone14": ["48MP main camera", "A16 chip", "6.1-inch Super Retina display", "128GB storage"],
+        "phone-s23": ["50MP triple camera", "Snapdragon flagship chip", "6.1-inch AMOLED display", "128GB storage"],
+        "phone-pixel8": ["50MP AI camera", "Google Tensor chip", "6.2-inch OLED display", "128GB storage"],
+        "phone-redmi13": ["200MP main camera", "120Hz AMOLED display", "8GB RAM", "256GB storage"]
+      };
+      if (product.id && byId[product.id]) return byId[product.id];
+      if (product.category === "laptop") return ["Modern CPU", "16GB RAM", "Fast SSD storage", "High-resolution display"];
+      if (product.category === "shoes") return ["Cushioned sole", "Breathable upper", "Durable outsole"];
+      if (product.category === "phone") return ["Multi-lens camera", "All-day battery", "High refresh display", "Fast chipset"];
+      return ["Quality build", "Reliable performance", "In-stock from local seller"];
+    }
+
     function buildDetailsPanel(product, queryText) {
+      const specs = specsForProduct(product);
       const checkoutParams = new URLSearchParams({
         id: product.id || "",
         product: product.name,
@@ -245,6 +268,12 @@
           <div class="grid gap-3 sm:grid-cols-2 text-sm text-zinc-600">
             <p><span class="text-zinc-900 font-medium">Store:</span> ${product.store}</p>
             <p><span class="text-zinc-900 font-medium">Location:</span> ${product.location}</p>
+          </div>
+          <div class="mt-3 rounded-xl border border-zinc-200 bg-zinc-50 p-3">
+            <p class="text-xs font-bold uppercase tracking-wider text-zinc-500">Specifications</p>
+            <ul class="mt-2 space-y-1 text-sm text-zinc-700">
+              ${specs.map((spec) => `<li>• ${spec}</li>`).join("")}
+            </ul>
           </div>
           <div class="mt-3 h-40 rounded-xl overflow-hidden border border-zinc-200 bg-zinc-50">
             <iframe class="w-full h-full" loading="lazy" referrerpolicy="no-referrer-when-downgrade" src="https://www.google.com/maps?q=${encodeURIComponent(product.location + ', Tanzania')}&output=embed"></iframe>
@@ -287,7 +316,10 @@
       const detailsLink = card.querySelector('[data-action="go-details"]');
 
       const saveSelection = () => {
-        sessionStorage.setItem("hweibo.selectedProduct", JSON.stringify(product));
+        sessionStorage.setItem("hweibo.selectedProduct", JSON.stringify({
+          ...product,
+          specs: specsForProduct(product)
+        }));
       };
 
       toggleButton.addEventListener("click", () => {
