--- a/prototype/seller/index.html
+++ b/prototype/seller/index.html
@@ -28,100 +28,89 @@
   </div>
 
   <main class="max-w-6xl mx-auto px-4 sm:px-6 lg:px-8 py-10 pl-24 sm:pl-32">
-    <div class="flex items-start justify-between gap-6">
+    <section class="flex flex-col gap-4 md:flex-row md:items-end md:justify-between">
       <div>
-        <h1 class="text-3xl font-extrabold text-zinc-900">Seller dashboard</h1>
-        <p class="mt-2 text-zinc-500">Track revenue, orders, and inventory at a glance.</p>
+        <h1 class="text-3xl sm:text-4xl font-extrabold text-zinc-900">Welcome back, Seller</h1>
+        <p class="mt-2 text-zinc-600">Here is what is happening with your store today.</p>
       </div>
-      <a href="sellers-new-product.html" class="px-5 py-3 rounded-full bg-black text-white font-semibold hover:bg-zinc-800 transition-colors">
-        Add product
+      <a href="sellers-new-product.html" class="inline-flex items-center justify-center px-5 py-3 rounded-full bg-black text-white text-sm font-semibold hover:bg-zinc-800 transition-colors">
+        Add new product
       </a>
-    </div>
+    </section>
 
-    <div class="mt-8 grid gap-4 sm:grid-cols-2 lg:grid-cols-3">
-      <div class="rounded-3xl border border-zinc-200 bg-zinc-50 p-6">
-        <p class="text-[10px] font-bold uppercase tracking-wider text-zinc-500">Revenue (30d)</p>
+    <div class="mt-4 grid gap-4 md:grid-cols-2 xl:grid-cols-4">
+      <div class="rounded-3xl border border-zinc-200 bg-white p-6">
+        <p class="text-[11px] font-bold uppercase tracking-wider text-zinc-500">Revenue (30d)</p>
         <p id="revenueValue" class="mt-2 text-3xl font-extrabold text-zinc-900">TZS 0</p>
-        <p id="revenueMeta" class="mt-2 text-sm text-zinc-500">Based on recent product activity</p>
+        <p id="revenueMeta" class="mt-2 text-sm text-zinc-500">0 managed categories</p>
       </div>
-      <div class="rounded-3xl border border-zinc-200 bg-zinc-50 p-6">
-        <p class="text-[10px] font-bold uppercase tracking-wider text-zinc-500">Orders</p>
+      <div class="rounded-3xl border border-zinc-200 bg-white p-6">
+        <p class="text-[11px] font-bold uppercase tracking-wider text-zinc-500">Total orders</p>
         <p id="ordersValue" class="mt-2 text-3xl font-extrabold text-zinc-900">0</p>
         <p id="ordersMeta" class="mt-2 text-sm text-zinc-500">0 in progress</p>
       </div>
-      <div class="rounded-3xl border border-zinc-200 bg-zinc-50 p-6">
-        <p class="text-[10px] font-bold uppercase tracking-wider text-zinc-500">Inventory</p>
+      <div class="rounded-3xl border border-zinc-200 bg-white p-6">
+        <p class="text-[11px] font-bold uppercase tracking-wider text-zinc-500">Inventory</p>
         <p id="inventoryValue" class="mt-2 text-3xl font-extrabold text-zinc-900">0</p>
-        <p id="inventoryMeta" class="mt-2 text-sm text-zinc-500">items in stock</p>
+        <p id="inventoryMeta" class="mt-2 text-sm text-zinc-500">0 products listed</p>
+      </div>
+      <div class="rounded-3xl border border-zinc-200 bg-zinc-50 p-6">
+        <p class="text-[11px] font-bold uppercase tracking-wider text-zinc-500">Store views</p>
+        <p id="viewsValue" class="mt-2 text-3xl font-extrabold text-zinc-900">0</p>
+        <p id="viewsMeta" class="mt-2 text-sm text-zinc-500">last 7 days</p>
       </div>
     </div>
 
-    <div class="mt-10 grid gap-4 lg:grid-cols-2">
+    <div class="mt-4 grid gap-4 lg:grid-cols-3">
       <section class="rounded-3xl border border-zinc-200 bg-white p-6">
         <div class="flex items-center justify-between">
-          <h2 class="text-lg font-extrabold text-zinc-900">Latest orders</h2>
+          <h2 class="text-lg font-extrabold text-zinc-900">Recent orders</h2>
           <a href="sellers-orders.html" class="text-sm font-semibold text-zinc-600 hover:text-black">View all</a>
         </div>
         <div id="latestOrders" class="mt-5 space-y-3"></div>
       </section>
 
+      <section class="lg:col-span-2 rounded-3xl border border-zinc-200 bg-white p-0 overflow-hidden">
+        <div class="flex items-center justify-between">
+          <h2 class="px-6 pt-6 text-lg font-extrabold text-zinc-900">Top products</h2>
+          <a href="sellers-products.html" class="px-6 pt-6 text-sm font-semibold text-zinc-600 hover:text-black">Manage inventory</a>
+        </div>
+        <div class="mt-5 overflow-x-auto">
+          <table class="min-w-full text-sm text-left text-zinc-600">
+            <thead class="text-xs uppercase tracking-wider text-zinc-400 bg-zinc-50">
+              <tr>
+                <th class="px-6 py-3">Product</th>
+                <th class="px-6 py-3">Category</th>
+                <th class="px-6 py-3">Stock</th>
+                <th class="px-6 py-3">Price</th>
+              </tr>
+            </thead>
+            <tbody id="dashboardTopProducts" class="divide-y divide-zinc-100"></tbody>
+          </table>
+        </div>
+      </section>
+    </div>
+
+    <div class="mt-4 grid gap-4 lg:grid-cols-2">
       <section class="rounded-3xl border border-zinc-200 bg-white p-6">
         <div class="flex items-center justify-between">
-          <h2 class="text-lg font-extrabold text-zinc-900">Performance</h2>
-          <a href="sellers-analytics.html" class="text-sm font-semibold text-zinc-600 hover:text-black">Details</a>
+          <h2 class="text-lg font-extrabold text-zinc-900">Categories</h2>
+          <a href="../admin/categories.html" class="text-sm font-semibold text-zinc-600 hover:text-black">Manage</a>
         </div>
-        <div class="mt-6 rounded-2xl border border-zinc-200 bg-zinc-50 p-4">
-          <svg viewBox="0 0 420 140" class="h-[140px] w-full" aria-label="Revenue chart">
-            <rect x="0" y="0" width="420" height="140" rx="16" fill="#fafafa" />
-            <path d="M20 105 C 80 30, 140 120, 210 55 S 320 30, 400 65" fill="none" stroke="#18181b" stroke-width="3" />
-            <circle cx="210" cy="55" r="5" fill="#18181b" />
-            <text x="20" y="22" font-size="12" fill="#52525b" font-family="ui-sans-serif, system-ui">Last 30 days</text>
-          </svg>
+        <div id="dashboardCategoryChips" class="mt-5 flex flex-wrap gap-2"></div>
+      </section>
+
+      <section class="rounded-3xl border border-zinc-200 bg-white p-6">
+        <div class="flex items-center justify-between">
+          <h2 class="text-lg font-extrabold text-zinc-900">Recent activity</h2>
+          <a href="sellers-analytics.html" class="text-sm font-semibold text-zinc-600 hover:text-black">Open analytics</a>
         </div>
+        <div id="dashboardActivity" class="mt-5 grid gap-3"></div>
       </section>
     </div>
   </main>
 
   <script defer src="seller-demo.js"></script>
   <script defer src="seller-nav.js"></script>
-  <script>
-    window.addEventListener("DOMContentLoaded", () => {
-      const products = window.SellerDemo.readProducts();
-      const summary = window.SellerDemo.getSummary(products);
-
-      const estimatedRevenue = products.reduce((sum, product) => {
-        const unit = Number(product.price) || 0;
-        const estimatedUnits = Math.max(1, Math.min(8, Number(product.stock) || 1));
-        return sum + (unit * estimatedUnits);
-      }, 0);
-
-      const orderCount = Math.max(12, Math.round(products.length * 6.5));
-      const processingCount = Math.max(2, Math.round(orderCount * 0.18));
-
-      document.getElementById("revenueValue").textContent = window.SellerDemo.formatCurrency(estimatedRevenue);
-      document.getElementById("revenueMeta").textContent = `${Object.keys(summary.categories).length} active categories`;
-      document.getElementById("ordersValue").textContent = orderCount;
-      document.getElementById("ordersMeta").textContent = `${processingCount} in progress`;
-      document.getElementById("inventoryValue").textContent = summary.totalStock;
-      document.getElementById("inventoryMeta").textContent = `${summary.totalProducts} products listed`;
-
-      const locations = ["Dar es Salaam", "Arusha", "Mwanza", "Dodoma"];
-      const latestOrders = document.getElementById("latestOrders");
-      latestOrders.innerHTML = products.slice(0, 4).map((product, index) => {
-        const orderId = `HW-${String(9800 - index)}`;
-        const qty = Math.max(1, Math.min(3, Math.round((Number(product.stock) || 1) / 10)));
-        const total = (Number(product.price) || 0) * qty;
-        return `
-          <div class="flex items-center justify-between rounded-2xl bg-zinc-50 border border-zinc-100 p-4">
-            <div>
-              <p class="font-bold text-zinc-900">#${orderId}</p>
-              <p class="text-sm text-zinc-500">${qty} item${qty > 1 ? "s" : ""} · ${locations[index % locations.length]}</p>
-            </div>
-            <span class="text-sm font-bold text-zinc-900">${window.SellerDemo.formatCurrency(total)}</span>
-          </div>
-        `;
-      }).join("");
-    });
-  </script>
 </body>
 </html>
