--- a/prototype/seller/sellers-new-product.html
+++ b/prototype/seller/sellers-new-product.html
@@ -44,11 +44,6 @@
           <label class="block text-sm font-medium text-zinc-700 mb-1">Category</label>
           <select id="productCategory" class="w-full px-4 py-3 rounded-2xl border border-zinc-200 focus:outline-none focus:border-black">
             <option>Accessories</option>
-            <option>Shoes</option>
-            <option>Audio</option>
-            <option>Electronics</option>
-            <option>Home</option>
-            <option>Fashion</option>
           </select>
         </div>
         <div>
@@ -77,6 +72,12 @@
   <script>
     window.addEventListener("DOMContentLoaded", () => {
       const form = document.getElementById("newProductForm");
+      const categorySelect = document.getElementById("productCategory");
+      const categories = window.SellerDemo.readCategories();
+      categorySelect.innerHTML = categories.map((category) => `<option>${category}</option>`).join("") || "<option>Uncategorized</option>";
+
+      if (form.dataset.bound === "1") return;
+      form.dataset.bound = "1";
       form.addEventListener("submit", (event) => {
         event.preventDefault();
         window.SellerDemo.addProduct({
