--- a/prototype/seller/sellers-orders.html
+++ b/prototype/seller/sellers-orders.html
@@ -162,7 +162,7 @@
     </div>
   </main>
 
-  <div id="sellerMapModal" class="hidden fixed inset-0 z-[70] bg-black/50 p-4 sm:p-8">
+  <div id="sellerMapModal" data-seller-portal class="hidden fixed inset-0 z-[70] bg-black/50 p-4 sm:p-8">
     <div class="bg-white w-full h-full rounded-2xl overflow-hidden border border-zinc-200">
       <div class="h-14 px-4 border-b border-zinc-200 bg-zinc-50 flex items-center justify-between">
         <p class="font-medium text-zinc-800">Expanded seller shipping map</p>
