--- a/prototype/signup.html
+++ b/prototype/signup.html
@@ -26,7 +26,6 @@
           <select id="accountRole" class="w-full px-4 py-3 rounded-xl border border-zinc-200 focus:border-black focus:outline-none transition-colors">
             <option value="buyer">Buyer / Customer</option>
             <option value="seller">Seller / Merchant</option>
-            <option value="admin">Admin / Operations</option>
           </select>
         </div>
         <div class="grid grid-cols-2 gap-4">
@@ -78,7 +77,7 @@
   <script>
     const params = new URLSearchParams(window.location.search);
     const rawRole = params.get("role");
-    const requestedRole = rawRole === "seller" || rawRole === "admin" ? rawRole : "buyer";
+    const requestedRole = rawRole === "seller" ? rawRole : "buyer";
     const roleInput = document.getElementById("accountRole");
     const loginLink = document.getElementById("loginLink");
     const signupEmail = document.getElementById("signupEmail");
@@ -87,19 +86,15 @@
     loginLink.href = `login.html?role=${requestedRole}`;
     if (requestedRole === "seller") {
       signupEmail.value = "seller@seller.hweibo.demo";
-    } else if (requestedRole === "admin") {
-      signupEmail.value = "admin@admin.hweibo.demo";
     } else {
       signupEmail.value = "buyer@buyer.hweibo.demo";
     }
 
     document.getElementById("signupForm").addEventListener("submit", (event) => {
       event.preventDefault();
-      const role = roleInput.value === "seller" || roleInput.value === "admin" ? roleInput.value : "buyer";
+      const role = roleInput.value === "seller" ? roleInput.value : "buyer";
       if (role === "seller") {
         window.location.href = "seller/index.html";
-      } else if (role === "admin") {
-        window.location.href = "admin/index.html";
       } else {
         window.location.href = "buyer/index.html";
       }
